# pyserper

./: README.md  pyproject.toml
pyserper/: client.py  exceptions.py
